--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <ul>
           <li class="active"><a href="#header" class="scrollto">Home</a></li>
           <li><a href="#about" class="scrollto">Random</a></li>
-          <li class="drop-down"><a href="">Topik Obrolan Tentang</a>
+          <li class="drop-down"><a href="">Topik Obrolan</a>
             <ul>
               <li><a href="#about2" class="scrollto">Hubungan Asmara</a></li>
               <li><a href="#about3" class="scrollto">Pribadi</a></li>
